# ipmon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  build.sh  config.env  deploy.sh  example-config.yaml  go.mod  initservice.sh  ipmon.env  ipmon.service.example  teardown.sh
.github/workflows/: buildandpush.yaml  client.yml  main.yml  server.yaml
cmd/ipmon/: main.go
internal/ip/: ip.go
internal/ipcache/: ipcache.go
internal/stringcache/: stringcache.go
internal/twilio/: twilio.go
src/: apprise.rs  client.rs  config.rs  ip.rs  lib.rs  main.rs  platform.rs  stringcache.rs  twilio.rs
src/client/: apprise.rs  config.rs
