[package]
name = "ipmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.7"
log = "0.4"
simple_logger = "4.2"
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
which = "4.4"
